# camera-calibration-patterns

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/camera_calibration_patterns/: __main__.py  gen_pattern.py  svgfig.py
tests/: test_basic.py
